# json-config

./: CHANGELOG.rst  Makefile  README.md  mkdocs.yml  pyproject.toml
.github/workflows/: code_quality.yml  deploy_docs.yml  unit_tests.yml
.zed/: debug.json
docs/: index.md
src/json_config/: config.py  config_layer.py  config_manager.py  helpers.py  simple_config.py  version.py
src/json_config/api/: __init__.py
src/json_config/layered_config/: config.py  config_layer.py  config_manager.py
tests/: conftest.py  test_config.py  test_config_layer.py  test_config_manager.py  test_simple_config.py
tests/fixtures/: simple_config.json
tests/fixtures/config_testing/app_layers/: user.json  workspace.json
tests/fixtures/config_testing/user_layers/: user1.json  user2.json
tests/fixtures/user_layers/: default.json
tests/layered_config/: test_config.py  test_config_layer.py  test_config_manager.py
