[project]
name = "json-config"
version = "0.0.1"
description = "Description"
authors = [
    {name = "Dima Shevchenko",email = "47799401+sowwic@users.noreply.github.com"}
]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.12"
packages = [
    {include = "json_config", from="src"},
]
dependencies = [

]


[build-system]
requires = ["uv_build>=0.10.6,<0.12.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "pytest ",
    "pytest-cov",
    "pytest-mock ",

    "mkdocs",
    "mkdocs-material ",
    "mkdocstrings[python]",
    "mkdocs-autorefs",
    "mkdocs-autoapi",
    "ruff",
    "debugpy",
]

[tool.ruff]
src = ["src"]

show-fixes = true
line-length = 89
lint.select = [
    "E",
    "F",
    "UP",
]
lint.ignore = [
]

[tool.pytest.ini_options]
addopts = "--cov=json_config --cov-report=term-missing"
log_cli = true
log_cli_level = "ERROR"

[tool.ty.rules]
unresolved-attribute="ignore"
invalid-argument-type="ignore"
invalid-assignment="ignore"
invalid-return-type="ignore"
invalid-method-override="ignore"
